[gd_scene load_steps=5 format=3 uid="uid://bfdq7aefi4oa6"]

[ext_resource type="Texture2D" uid="uid://cbt4cl250ax6g" path="res://assets/Spaceship.png" id="1_8afob"]
[ext_resource type="Script" uid="uid://byh6vjcfog565" path="res://scenes/player/player.gd" id="1_dovo2"]
[ext_resource type="AudioStream" uid="uid://dbsogfs2lox3r" path="res://assets/laserShoot.wav" id="3_gmlin"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8afob"]
radius = 8.0

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_dovo2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8afob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8afob")

[node name="LaserSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, -8)

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="LaserFireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gmlin")
volume_db = -10.0
